--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,9 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: photos_production
-  username: photos
-  password: <%= ENV['PHOTOS_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  database: photo_production
+  username: photo
+  password: <%= ENV['MESSAGE-BOARD_DATABASE_PASSWORD'] %>
